adjusting swagger and unit tests, creating readme and DTO's
