# src/dtos/update-task.dto.ts
@@ -1,0 +1,6 @@
+export interface UpdateTaskDto {
+  title?: string;
+  description?: string;
+  status?: "pending" | "waiting" | "done";
+  priority?: 1 | 2 | 3 | 4 | 5;
+}
